# biTK

./: LICENSE  MANIFEST  MANIFEST.in  README.md  setup.cfg  setup.py
biTK/: __init__.py
biTK/ngs/: __init__.py
biTK/ngs/SubMatrice/: MatInfo.py  __init__.py
biTK/ngs/apps/: __init__.py  statsApp.py
biTK/ngs/cluster/: __init__.py  _hierarchy.c  _hierarchy.pyx  _hierarchy_distance_update.pxi  hierarchy.py
biTK/ngs/concurrent/: __init__.py  abstractThreadPool.py  threadPool.py  threadTask.py  threadWorker.py
biTK/ngs/data/: arab.txt
biTK/ngs/io/: __init__.py  alignIO.py  buffer.py  generator.py  pathtools.py
biTK/ngs/sequence/: __init__.py  alphabet.py  sequence.py
biTK/ngs/sequence/align/: __init__.py  alignment.py  alignmentInfo.py
biTK/ngs/statistics/: __init__.py  distributions.py  functools.py
biTK/ngs/templates/: macros.html  report.html  section.html
biTK/ngs/utils/: __init__.py  helpformatter.py  iterspy.py  logger.py  report.py
