[metadata]
# Meta data for the project as described in PEP 345
# field names are case-insensitive
name = biTK
version = 1.0.0
platform =
supported-platform=
summary = python tools for NGS sequence analysis
#description =
#description-file = README.txt
keywords = Bioinformatics tools for NGS
home_page = http://www.bi.a.u-tokyo.ac.jp
download-url =
author = Wei CAO
author_email = davecao@bi.a.u-tokyo.ac.jp
maintainer = Wei CAO
maintainer-email = davecao@bi.a.u-tokyo.ac.jp
license = GPL
classifier = 
    Topic :: Bioinformatics
    Environment :: Other Environment
    License :: OSI Approved :: Apache Software License
    Development Status :: 4 - Beta
    Topic :: Documentation
    Topic :: Text Processing :: General
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

requires-dist = 
provides-dist =
obsoletes-dist =
#requires-python =
requires-externals =
project-url =

[global]
# Global options for Distutils2 shared with Distutil1
# commands =
# compiler =
# setup_hook =


[files]
# the root directory containing all packages.
# If not provided Distutils2 will use the current directory. *optional

packages_root = 

# a list of packages the project includes *optional *multi

packages =
    biTK
    biTK.ngs
    biTK.ngs.concurrent
    biTK.ngs.statistics
    biTK.ngs.io
    biTK.ngs.sequence
    biTK.ngs.sequence.align
    biTK.ngs.SubMatrice
    biTK.ngs.templates
    biTK.ngs.utils
    biTK.ngs.apps

extra_files =
    README
    README.md
    LICENSE
    MANIFEST

package_data =
    biTK/ngs/templates/*.html

[build_ext]
# needed so that tests work without mucking with sys.path
#inplace = on

#[build_py]
#use-2to3 = True

[check]
strict = on
#all = on

[sdist]
#manifest-builders = package.module.Maker
